[metadata]
name = monai_ex
author = Chenglong Wang
author_email = clwang@phy.ecnu.edu.cn
url = 
description = A development version of MONAI for Strix
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
license = GNU General Public License
license_files =
    LICENSE

[options]
python_requires = >= 3.7
setup_requires =
    torch
    ninja
install_requires =
    torch>=1.7
    numpy>=1.17
    monai==0.8.0
    matplotlib==3.3.3
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = monai_ex/_version.py
versionfile_build = monai_ex/_version.py
tag_prefix =
parentdir_prefix =

